Fix: Skill items wrap - Items group

--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -13,6 +13,13 @@ p {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
+    .row-group {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+    }
   }
 
   /* FIXME : Remove me once component is complete */
